--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -39,6 +39,10 @@
   h6{
     font-size: small;
   }
+  a{
+    color: rgb(2, 102, 196);
+    text-decoration: underline;
+  }
 
   .ubuntu-light {
     font-family: "Ubuntu", sans-serif;
