--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -44,51 +44,53 @@
     text-decoration: underline;
   }
 
-  .ubuntu-light {
-    font-family: "Ubuntu", sans-serif;
+  .open-sans-light {
+    font-family: "Open Sans", sans-serif;
+    font-optical-sizing: auto;
     font-weight: 300;
     font-style: normal;
+    font-variation-settings:
+      "wdth" 100;
   }
-  
-  .ubuntu-regular {
-    font-family: "Ubuntu", sans-serif;
+  .open-sans-regular {
+    font-family: "Open Sans", sans-serif;
+    font-optical-sizing: auto;
     font-weight: 400;
     font-style: normal;
+    font-variation-settings:
+      "wdth" 100;
   }
-  
-  .ubuntu-medium {
-    font-family: "Ubuntu", sans-serif;
+  .open-sans-medium {
+    font-family: "Open Sans", sans-serif;
+    font-optical-sizing: auto;
     font-weight: 500;
     font-style: normal;
+    font-variation-settings:
+      "wdth" 100;
   }
-  
-  .ubuntu-bold {
-    font-family: "Ubuntu", sans-serif;
+  .open-sans-semibold {
+    font-family: "Open Sans", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 600;
+    font-style: normal;
+    font-variation-settings:
+      "wdth" 100;
+  }
+  .open-sans-bold {
+    font-family: "Open Sans", sans-serif;
+    font-optical-sizing: auto;
     font-weight: 700;
     font-style: normal;
+    font-variation-settings:
+      "wdth" 100;
+  }
+  .open-sans-black {
+    font-family: "Open Sans", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 800;
+    font-style: normal;
+    font-variation-settings:
+      "wdth" 100;
   }
   
-  .ubuntu-light-italic {
-    font-family: "Ubuntu", sans-serif;
-    font-weight: 300;
-    font-style: italic;
-  }
-  
-  .ubuntu-regular-italic {
-    font-family: "Ubuntu", sans-serif;
-    font-weight: 400;
-    font-style: italic;
-  }
-  
-  .ubuntu-medium-italic {
-    font-family: "Ubuntu", sans-serif;
-    font-weight: 500;
-    font-style: italic;
-  }
-  
-  .ubuntu-bold-italic {
-    font-family: "Ubuntu", sans-serif;
-    font-weight: 700;
-    font-style: italic;
-  }
 }
