--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,83 +18,38 @@
 }
 
 @layer utilities {
-  h1,h2,h3,h4, h5,h6 {
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
     font-weight: 700;
   }
-  h1{
+  h1 {
     font-size: xx-large;
   }
-  h2{
+  h2 {
     font-size: x-large;
   }
-  h3{
+  h3 {
     font-size: larger;
   }
-  h4{
+  h4 {
     font-size: large;
   }
-  h5{
+  h5 {
     font-size: medium;
   }
-  h6{
+  h6 {
     font-size: small;
   }
-  a{
+  a {
     color: rgb(2, 102, 196);
     text-decoration: underline;
   }
-
-  .open-sans-light {
-    font-family: "Open Sans", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: 300;
-    font-style: normal;
-    font-variation-settings:
-      "wdth" 100;
-  }
-  .open-sans-regular {
-    font-family: "Open Sans", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: 400;
-    font-style: normal;
-    font-variation-settings:
-      "wdth" 100;
-  }
-  .open-sans-medium {
-    font-family: "Open Sans", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: 500;
-    font-style: normal;
-    font-variation-settings:
-      "wdth" 100;
-  }
-  .open-sans-semibold {
-    font-family: "Open Sans", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: 600;
-    font-style: normal;
-    font-variation-settings:
-      "wdth" 100;
-  }
-  .open-sans-bold {
-    font-family: "Open Sans", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: 700;
-    font-style: normal;
-    font-variation-settings:
-      "wdth" 100;
-  }
-  .open-sans-black {
-    font-family: "Open Sans", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: 800;
-    font-style: normal;
-    font-variation-settings:
-      "wdth" 100;
-  }
-
-  .textTransition{
-    transition: all .3s ease-in;
+  .textTransition {
+    transition: all 0.3s ease-in;
   }
 
   ol {
@@ -113,6 +68,4 @@
     text-align: -webkit-match-parent;
     unicode-bidi: isolate;
   }
-
-  
 }
